src/test/test-models/bad/err-expected-model.stan
parameters {
  real y;
}
generated quantities {
  int n;
  n <- 2;
}
model {
}
